--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
     "express-session": "^1.17.2",
+    "heroku": "^7.60.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.2",
     "mongoose": "^6.2.10",
