--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_Env=production node index",
-    "dev": "cross-env NODE_Env=development nodemon index"
+    "start": "node_modules/cross-env/src/bin/cross-env.js NODE_Env=production node index",
+    "dev": "node_modules/cross-env/src/bin/cross-env.js NODE_Env=development nodemon index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^4.6.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
