--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/cross-env/src/bin/cross-env.js NODE_Env=production node index",
-    "dev": "node_modules/cross-env/src/bin/cross-env.js NODE_Env=development nodemon index"
+    "start": "cross-env NODE_Env=production node index",
+    "dev": "cross-env NODE_Env=development nodemon index"
   },
   "keywords": [],
   "author": "",
