--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_Env=production node index",
+    "start": "cross-env NODE_Env=production node index.js",
     "dev": "cross-env NODE_Env=development nodemon index"
   },
   "keywords": [],
